# device_hub_handler

./: .env.example  .pre-commit-config.yaml  Cargo.toml  README.md  cz.yaml
src/: main.rs
src/api/: handlers.rs  maestro_handlers.rs  mod.rs
src/api/controllers/: bundle_handlers.rs  device_handlers.rs  maestro_handlers.rs  mod.rs
src/api/services/: bundle_service.rs  device_service.rs  maestro_service.rs  mod.rs
src/device_adapter/: adapter.rs  adb_adapter.rs  i_adapter.rs  ios_adapter.rs  mod.rs
src/device_adapter/android/: adapter.rs
src/device_adapter/ios/: adapter.rs
src/services/: bundle_service.rs  maestro_service.rs  mod.rs
src/utils/: apks_helper.rs  args.rs  command_executor.rs  command_parser.rs  commands.rs  env_helper.rs  files_manager.rs  mod.rs  multipart_helper.rs
