[package]
name = "device_hub_handler"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.96"
strum_macros = "0.24.3"
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.17.1"
log = "0.4.17"
env_logger = "0.10.0"
