[package]
name = "dhh"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.1"
serde = { version = "1.0.160", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.96"
strum_macros = "0.24.3"
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.17.1"
log = "0.4.17"
env_logger = "0.10.0"
dialoguer = "0.10.4"
clap = { version = "4.2.5", features = ["derive"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
axum = { version = "0.6.18", features = ["multipart"] }
tracing = "0.1"
tower-http = { version = "0.3.5", features = ["trace", "limit"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip-extract = "0.1.2"
glob = "0.3.1"
plist = "1.4.3"
